tests/fail/semantic/accessVarDico.tiger
let
	type vector = {x:int,y:int}
	type variab = {v:vector,n:string}

	var xy := variab{v=vector{x=42,y=42}, "Quarante-deux"}

	var test : int := 42

in

	test:=xy.w;

end
